--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let socket = io.connect("http://localhost:3000");
+      let socket = io.connect("https://open-board-psi.vercel.app");
     </script>
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
